--- a/draft_motion.html
+++ b/draft_motion.html
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="assignment2styles.css">
+    <link rel="stylesheet" href="draft_motion.css">
 </head>
 
 <body>
