--- a/discussion.html
+++ b/discussion.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discussion Page</title>
-    <link rel="stylesheet" href="assignment2styles.css">
+    <link rel="stylesheet" href="draft_motion.css">
 </head>
 
 <body>
