--- a/discussion.html
+++ b/discussion.html
@@ -9,28 +9,33 @@
 </head>
 
 <body>
-    <div id="discussion-container">
-        <header id="discussion-header">
-            <h1>Discussion on Motion</h1>
-            <h2>Chat with others about the motion here.</h2>
-        </header>
+    <div id = "discussion-page">
+        <div id = "sidebar-member">
 
-        <section id="chat-section">
-            <div id="message-box">
-                <!-- Messages will appear here -->
-                <div class="message">
-                    <span class="username">User1:</span> This is an example message.
+        </div>
+        <div id="discussion-container">
+            <header id="discussion-header">
+                <h1>Discussion on Motion</h1>
+                <h2>Chat with others about the motion here.</h2>
+            </header>
+
+            <section id="chat-section">
+                <div id="message-box">
+                    <!-- Messages will appear here -->
+                    <div class="message">
+                        <span class="username">User1:</span> This is an example message.
+                    </div>
+                    <div class="message">
+                        <span class="username">User2:</span> Here's another message.
+                    </div>
                 </div>
-                <div class="message">
-                    <span class="username">User2:</span> Here's another message.
-                </div>
-            </div>
-            
-            <form id="messageForm">
-                <input type="text" id="messageInput" name="message" placeholder="Type your message here" required>
-                <button type="submit" class="btn">Send</button>
-            </form>
-        </section>
+                
+                <form id="messageForm">
+                    <input type="text" id="messageInput" name="message" placeholder="Type your message here" required>
+                    <button type="submit" class="btn">Send</button>
+                </form>
+            </section>
+        </div>
     </div>
     <script>
         const form = document.getElementById('messageForm');
