--- a/homepage.html
+++ b/homepage.html
@@ -20,10 +20,10 @@
     
             <div class= "teams">
                 
-                <div class="team">
+                <a href="\team_home.html" target="_blank"><div class="team">
                     <img src="\home-imgs\people.svg" class="people" alt="">
                     <p>Team 1</p>
-                </div>
+                </div></a>
                 <div class="team">
                     <img src="\home-imgs\people.svg" class="people" alt="">
                     <p>Team 1</p>
