--- a/homepage.html
+++ b/homepage.html
@@ -20,7 +20,7 @@
     
             <div class= "teams">
                 
-                <a href="\team_home.html" target="_blank"><div class="team">
+                <a href="\team_home" target="_blank"><div class="team">
                     <img src="\home-imgs\people.svg" class="people" alt="">
                     <p>Team 1</p>
                 </div></a>
