--- a/team_home.html
+++ b/team_home.html
@@ -42,7 +42,7 @@
             </div>
             <div class="page-middle">
                 <div class="text-2">Motion Archive</div>
-                <a href="\discussion.html" target="_blank"><div class="text-2">Discussion Page</div></a>
+                <a href="\discussion" target="_blank"><div class="text-2">Discussion Page</div></a>
             </div>
         </div>
 
