adding archive page and link

--- a/team_home.html
+++ b/team_home.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="page-middle">
-                <div class="text-2">Motion Archive</div>
+                <a href="\motion_archive"><div class="text-2">Motion Archive</div></a>
                 <a href="\discussion" target="_blank"><div class="text-2">Discussion Page</div></a>
             </div>
         </div>
