--- a/homepage.html
+++ b/homepage.html
@@ -51,7 +51,7 @@
         function toggleDarkMode() {
             const body = document.body;
             const page = document.querySelector('.web-container');
-            if (body.style.backgroundColor === 'dimgre') {
+            if (body.style.backgroundColor == 'dimgrey') {
                 body.style.backgroundColor = 'white';
                 page.style.backgroundColor = 'white';
             } else {
