--- a/homepage.html
+++ b/homepage.html
@@ -37,9 +37,10 @@
                     <p>Team 1</p>
                 </div>
     
-                <div class="add-team">
+                <a href="\create_committee"><div class="add-team">
                     <img src="\home-imgs\plus-solid.svg" alt="">
                     <p>Add a Committee</p>
+                </a>
                 </div>
             </div>
     
