added close motion button and corresponding page

--- a/team_home.html
+++ b/team_home.html
@@ -38,6 +38,7 @@
                         <img src="team-imgs/ex.png" alt="">
                     </div>
                     <div class="text-4">Raise Sub-Motion</div>
+                    <div class="text-4">Close Motion</div>
                 </div>
             </div>
             <div class="page-middle">
