there is now one m in comittee

--- a/homepage.html
+++ b/homepage.html
@@ -37,7 +37,7 @@
                     <p>Team 1</p>
                 </div>
     
-                <a href="\create_committee"><div class="add-team">
+                <a href="\create_comittee"><div class="add-team">
                     <img src="\home-imgs\plus-solid.svg" alt="">
                     <p>Add a Committee</p>
                 </a>
