home button on create_comittee page

--- a/create_comittee.html
+++ b/create_comittee.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Create Committee</title>
     <link rel="stylesheet" href="create_comittee.css">
 </head>
 <body>
     <div class="web-container">
+        <a href="homepage.html" class="home-button">Home</a> <!-- home button -->
+
         <div>Create Committee</div>
         <form class="create">
             <div class="section">
