added home buttons to pages

--- a/motion_archive.html
+++ b/motion_archive.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="web-container">
+        <a href="homepage.html" class="home-button">Home</a> <!-- home button -->
         <div class="title">Motion Archive</div>
     </div> 
 </body>
