--- a/discussion.html
+++ b/discussion.html
@@ -9,6 +9,7 @@
 </head>
 
 <body>
+    <a href="homepage.html" class="home-button">Home</a> <!-- home button -->
     <div id="discussion-container">
         <header id="discussion-header">
             <h1>Discussion on Motion</h1>
