--- a/team_home.html
+++ b/team_home.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <div class="web-container">
+        <a href="homepage.html" class="home-button">Home</a> <!-- home button -->
         <div class="side-bar">
             <div class="text-2">Motion Queue</div>
             <div class="queue-item">
