--- a/discussion.html
+++ b/discussion.html
@@ -23,7 +23,8 @@
                         <a href="#">I think we should make a motion</a>
                     </div>
 
-<!--     <a href="homepage.html" class="home-button">Home</a> <!-- home button --> -->
+<!-- home button -->
+<!--     <a href="homepage.html" class="home-button">Home</a>  -->
 <!--     <div id="discussion-container"> -->
 <!--         <header id="discussion-header"> -->
 <!--             <h1>Discussion on Motion</h1> -->
