added create-committee post method

--- a/create_comittee.html
+++ b/create_comittee.html
@@ -14,17 +14,17 @@
         <form class="create">
             <div class="section">
                 <label for="name">Committee Name:</label>
-                <input type="text" id="name" name="name">
+                <input type="text" id="name" name="name" required>
             </div>
             <div class="section">
                 <label for="email">Add Members By Email:</label>
                 <input type="text" id="email" name="email">
                 <label for="role">Role:</label>
                 <input type="text" id="role" name="role">
-                <button type="button">Add</button>
+                <button type="button" id = "add-member">Add</button>
             </div>
         </form>
-        <button type="button">Submit</button>
+        <button type="submit">Submit</button>
     </div>
     
 </body>
