discussion & login styling

--- a/discussion.html
+++ b/discussion.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discussion Page</title>
     <link rel="stylesheet" href="draft_motion.css">
+    <link rel="stylesheet" href="styles.css">
     <script type="text/javascript" src="dropdown.js"></script>
 
 </head>
 
 <body>
-  
     <div id = "main-container">
         <div id = "sidebar-container">
             <section id="sidebar">
