--- a/login.html
+++ b/login.html
@@ -10,10 +10,14 @@
 </head>
 
 <body>
+    
     <div class="container">
             <div class="box"></div>
             <div class="box-top">
-                <div class="rr-logo">Robert's Realm</div>
+                <!-- <div class="rr-logo">Robert's Realm</div> -->
+                <img src="home-imgs/robertsrules.png" alt="RR"
+                style="width:80px;height:75px;">
+
                 <div class ="login-info">Welcome back, User!</div>
                 <div class="login-info">
                     <form>
