--- a/team_home.html
+++ b/team_home.html
@@ -25,7 +25,7 @@
                 </div>
             </div>
             <div class="motion">
-                <div class="text-4">Current Motion</div>
+                <div class="text-4"><strong>Current Motion</strong> </div>
                 <div id="text-3"></div>
                 <div id="text-desc"></div>
                 <div class="motion-bottom">
