--- a/motion_archive.html
+++ b/motion_archive.html
@@ -10,7 +10,7 @@
     <div class="web-container">
         <a href="homepage.html" class="home-button">Home</a> <!-- home button -->
         <div class="title">Motion Archive</div>
-        <div class = "motionContainer"></div>
+        <div id = "motionContainer"></div>
     </div> 
 </body>
 </html>
@@ -38,17 +38,31 @@
             alert(result.message);
                                     
             if (response.ok) {
-                const container = document.getElementById('motionsContainer');
+                const container = document.getElementById('motionContainer');
+                container.innerHTML = '';
                 result.forEach(motion => {
                     const element = document.createElement('div');
                     element.className = 'motion';
-                    element.textContent = JSON.stringify(motion);
+
+                    // Title element
+                    const titleElement = document.createElement('div');
+                    titleElement.className = 'motion-title';
+                    titleElement.textContent = motion.title || 'Untitled';
+
+                    // Content element
+                    const contentElement = document.createElement('div');
+                    contentElement.className = 'motion-content';
+                    contentElement.textContent = JSON.stringify(motion, null, 2);
+
+                    // Append title and content to the item element
+                    element.appendChild(titleElement);
+                    element.appendChild(contentElement);
                     container.appendChild(element);
                 });
             }
         }
         catch (error) {
-            console.error('Error:', error);
+            console.error('Error fetching motions:', error);
         }
     }
     fetchMotions();
