--- a/team_home.html
+++ b/team_home.html
@@ -37,7 +37,8 @@
                         <img src="team-imgs/ex.png" alt="">
                     </div>
                     <div class="text-4">Raise Sub-Motion</div>
-                    <div class="text-4">Close Motion</div>
+                    <a href="close_motion.html"><div class="text-4">Close Motion</div></a>
+
                 </div>
             </div>
             <div class="page-middle">
