--- a/discussion.html
+++ b/discussion.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discussion Page</title>
     <link rel="stylesheet" href="draft_motion.css">
+    <link rel="stylesheet" href="discussion.css">
     <link rel="stylesheet" href="styles.css">
-    <script type="text/javascript" src="dropdown.js"></script>
 
 </head>
 
@@ -105,4 +105,5 @@
     </div>
 </body>
 
+<script type="text/javascript" src="dropdown.js"></script>
 </html>
