--- a/motion_archive.html
+++ b/motion_archive.html
@@ -16,6 +16,41 @@
 </html>
 
 <script>
+    fetch('http://localhost:3000/current')
+    .then(response => response.json())
+    .then(data => {
+        committeeID = data.currentCommitteeName;
+
+        // Fetch the user data using the email
+        return fetch(`http://localhost:3000//motions/${committeeID}`);
+    })
+    .then(response => response.json())
+    .then(data => {
+                const container = document.getElementById('motionContainer');
+                container.innerHTML = '';
+                result.forEach(motion => {
+                    const element = document.createElement('div');
+                    element.className = 'motion';
+
+                    // Title element
+                    const titleElement = document.createElement('div');
+                    titleElement.className = 'motion-title';
+                    titleElement.textContent = motion.title || 'Untitled';
+
+                    // Content element
+                    const contentElement = document.createElement('div');
+                    contentElement.className = 'motion-content';
+                    contentElement.textContent = JSON.stringify(motion, null, 2);
+
+                    // Append title and content to the item element
+                    element.appendChild(titleElement);
+                    element.appendChild(contentElement);
+                    container.appendChild(element);
+                });
+            }
+    )
+    .catch(error => console.error('Error:', error));
+
     async function fetchMotions() {
         try {
             let committeeID= await fetch('http://localhost:3000/current', {
