--- a/motion_archive.html
+++ b/motion_archive.html
@@ -21,33 +21,32 @@
     .then(data => {
         committeeID = data.currentCommitteeName;
 
-        // Fetch the user data using the email
-        return fetch(`http://localhost:3000//motions/${committeeID}`);
+        // Fetch the current committee's motions
+        return fetch(`http://localhost:3000/motions/${committeeID}`);
     })
     .then(response => response.json())
     .then(data => {
-                const container = document.getElementById('motionContainer');
-                container.innerHTML = '';
-                result.forEach(motion => {
-                    const element = document.createElement('div');
-                    element.className = 'motion';
+        const container = document.getElementById('motionContainer');
+        container.innerHTML = '';
+        data.forEach(motion => {
+            const element = document.createElement('div');
+            element.className = 'motion';
 
-                    // Title element
-                    const titleElement = document.createElement('div');
-                    titleElement.className = 'motion-title';
-                    titleElement.textContent = motion.title || 'Untitled';
+            // Title element
+            const titleElement = document.createElement('div');
+            titleElement.className = 'motion-title';
+            titleElement.textContent = motion.title || 'Untitled';
 
-                    // Content element
-                    const contentElement = document.createElement('div');
-                    contentElement.className = 'motion-content';
-                    contentElement.textContent = JSON.stringify(motion, null, 2);
+            // Content element
+            const contentElement = document.createElement('div');
+            contentElement.className = 'motion-content';
+            contentElement.textContent = JSON.stringify(motion, null, 2);
 
-                    // Append title and content to the item element
-                    element.appendChild(titleElement);
-                    element.appendChild(contentElement);
-                    container.appendChild(element);
-                });
-            }
-    )
+            // Append title and content to the item element
+            element.appendChild(titleElement);
+            element.appendChild(contentElement);
+            container.appendChild(element);
+        });
+    })
     .catch(error => console.error('Error:', error));
 </script>
