--- a/motion_archive.html
+++ b/motion_archive.html
@@ -35,12 +35,12 @@
             // Title element
             const titleElement = document.createElement('div');
             titleElement.className = 'motion-title';
-            titleElement.textContent = motion.title || 'Untitled';
+            titleElement.textContent = motion.name || 'Untitled';
 
             // Content element
             const contentElement = document.createElement('div');
             contentElement.className = 'motion-content';
-            contentElement.textContent = JSON.stringify(motion, null, 2);
+            contentElement.textContent = motion.description || 'No description';
 
             // Append title and content to the item element
             element.appendChild(titleElement);
