forgot to filter by status

--- a/motion_archive.html
+++ b/motion_archive.html
@@ -28,7 +28,9 @@
     .then(data => {
         const container = document.getElementById('motionContainer');
         container.innerHTML = '';
-        data.forEach(motion => {
+        data
+        .filter(motion => motion.status == 'closed')
+        .forEach(motion => {
             const element = document.createElement('div');
             element.className = 'motion';
 
