--- a/motion_archive.html
+++ b/motion_archive.html
@@ -29,7 +29,7 @@
         const container = document.getElementById('motionContainer');
         container.innerHTML = '';
         data
-        .filter(motion => motion.status == 'closed')
+        .filter(motion => motion.status === 'closed')
         .forEach(motion => {
             const element = document.createElement('div');
             element.className = 'motion';
