--- a/motion_archive.html
+++ b/motion_archive.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="web-container">
-        <a href="homepage.html" class="home-button">Home</a> <!-- home button -->
+        <a href="team_home.html" class="home-button">Home</a> <!-- home button -->
         <div class="title">Motion Archive</div>
         <div id = "motionContainer"></div>
     </div> 
